2.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-writer-srv
spec:
  type: ClusterIP
  selector:
    app: string-writer-app
  ports:
    - name: string
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: ping
      port: 2346
      protocol: TCP
      targetPort: 3001
